移除sum的base64包